# drace

./: .gitlab-ci.yml  CMakeLists.txt  DEPENDENCIES.md  README.md
CMakeExt/modules/: Coverage.cmake
HowTo/shoppingrush/: ShoppingRush.cpp
common/: CMakeLists.txt
common/detector/: Detector.h
common/ipc/: spinlock.h
contrib/: run_test_cov.sh
drace-client/detectors/: CMakeLists.txt
drace-client/detectors/dummy/: dummy.cpp
drace-client/detectors/fasttrack/src/: fasttrack_dr.cpp
drace-client/detectors/printer/: printer.cpp
drace-client/detectors/traceBinary/: CMakeLists.txt  TraceBinary.cpp
drace-client/detectors/tsan/: tsan.cpp
drace-client/include/: RuntimeConfig.h  ShadowThreadState.h  func_def.h  globals.h  shadow-stack.h
drace-client/src/: RuntimeConfig.cpp  drace-client.cpp  globals.cpp  memory-tracker.cpp
drace-client/test/: CMakeLists.txt  shadow-stack-test.cpp  shadow-stack-test.h
standalone/: CMakeLists.txt  README.md
standalone/binarydecoder/: BinaryDecoder.cpp  CMakeLists.txt  DetectorOutput.h
standalone/detectors/fasttrack/: CMakeLists.txt
standalone/detectors/fasttrack/additional/: CMakeLists.txt
standalone/detectors/fasttrack/additional/include/: prof.h  trie.h
standalone/detectors/fasttrack/additional/src/: prof.cpp
standalone/detectors/fasttrack/include/: MemoryPool.h  PoolAllocator.h  PrefixTreeDepot.h  PrefixTree_StackDepot.h  SelectAllocator.h  StackTreeNode.h  TreeDepot.h  debug.h  fasttrack.h  fasttrack_wrapper.h  prof.h  stacktrace.h  stacktrie.h  threadstate.h  varstate.h  vectorclock.h  xvector.h
standalone/detectors/fasttrack/prof/: related.cpp
standalone/detectors/fasttrack/prof/include/: prof.h
standalone/detectors/fasttrack/src/: MemoryPool.cpp  fasttrack_st.cpp  stacktrace.cpp  threadstate.cpp  varstate.cpp
standalone/detectors/fasttrack/test/: fasttrack_test.cpp  fasttrack_test.h
standalone/detectors/fasttrackpy/: CMakeLists.txt  fasttrack.cpp  fasttrack.py
standalone/dracepy/: CMakeLists.txt  dracepy.cpp  example.py
standalone/dracepy/include/: AccessEntryUtils.h  DetectorPy.h  ThreadStatePy.h
standalone/dracepy/src/: DetectorPy.cpp  bindings.cpp
standalone/ft_benchmark/: CMakeLists.txt  ft_benchmark.cpp
standalone/helper/: CMakeLists.txt
standalone/helper/src/: helper.cpp  main.cpp
test/: CMakeLists.txt
test/include/: IntegrationTest.h
test/src/: DetectorTest.cpp
tools/DRaceGUI/: CMakeLists.txt
tools/DRaceGUI/include/: Command_Handler.h  Data_Handler.h
tools/DRaceGUI/qt/: About_Dialog.ui  DR_Options_Dialog.ui  Detector_Options_Dialog.cpp  Detector_Options_Dialog.h  Detector_Options_Dialog.ui  Options_Dialog.ui  Report_Config.ui  draceGUI.cpp  draceGUI.h  draceGUI.ui
tools/DRaceGUI/src/: Data_Handler.cpp
